--- a/styles.css
+++ b/styles.css
@@ -4,6 +4,29 @@ body {
     padding: 20px;
 }
 
+.hero-startbild {
+    height: 30%;
+    width: 100%;
+    margin-left: auto;
+    margin-right: auto;
+    display: block;
+    object-fit: cover;
+    filter:blur(2px);
+    filter:grayscale(0.6)
+
+}
+
+.text {
+    position: relative;
+    top: -3rem;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    color: rgb(255, 255, 255);
+    font-size: 52px;
+    font-weight: bold;
+    text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5);
+}
+
 .container {
     width: 80%;
     margin: 0 auto;
@@ -16,5 +39,5 @@ h1 {
 }
 
 p {
-    text-align: justify;
+    text-align: center;
 }
